Fix overflow issue

--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    display: block;
+    overflow: auto;
 }
 .task-display{
     flex-grow:1;
